Added Linear Algebra

--- a/labs/1/LinearAlgebra.ipynb
+++ b/labs/1/LinearAlgebra.ipynb
@@ -19,12 +19,14 @@
     "    * A rank 0 tensor is called a scalar, e.g. $2$, $3.8989$. By convention, scalars are denoted by common letter variables, e.g. $x = 3.8989$\n",
     "    * A rank 1 tensor is called a (column) vector, e.g. $\\begin{bmatrix}2.1 \\\\ 3.4\\end{bmatrix}$. By convention, we use common letters to denote vectors or common letter with arrows overhead, e.g. $x = \\begin{bmatrix}2.1 \\\\ 3.4\\end{bmatrix}$ or $\\vec{x} = \\begin{bmatrix}2.1 \\\\ 3.4\\end{bmatrix}$   Vectors are often used to represent directions through space or points in space.\n",
     "    * A rank 2 tensor is called a matrix, e.g. $\\begin{bmatrix}2 & 3 \\\\ 4 & 5\\end{bmatrix}$. By convention, we use capital letters to denote matrices, e.g. $M = \\begin{bmatrix}2 & 3 \\\\ 4 & 5\\end{bmatrix}$\n",
-    "* While rank tells us the number of dimensions, each dimension has a size. We need to describe the set of tensors drawn from a particular set with each dimension having a particular size. By convention, a vector of size $n$ over the set of real numbers is said to be an element of the set $\\mathbb{R}^n$, and a matrix with $n$ rows and $m$ columns over the set of real numbers is said to be an element of the set $\\mathbb{R}^{n \\times m}$. Note that vectors of size $n$ can be descibed as being matrices of size $n \\times 1$\n",
+    "* While rank tells us the number of dimensions, each dimension has a size. We need to describe the set of tensors drawn from a particular set with each dimension having a particular size. By convention, a vector of size $n$ over the set of real numbers is said to be an element of the set $\\mathbb{R}^n$, and a matrix with $n$ rows and $m$ columns over the set of real numbers is said to be an element of the set $\\mathbb{R}^{n \\times m}$. \n",
+    "* Note that vectors of size $n$ can be descibed as being matrices of size $n \\times 1$ and are, at least computationally, are sometimes treated as such. Note, however, that vectors are usually used to express concepts different from that of matricies. Matrices are usually used (including in an AI context) as a way of expressing a special type of function called a linear mapping, while vectors are used to describe directions or \"points\" in space.\n",
     "*  The $i$<sup>th</sup> component of a vector $x$ is denoted as $x_i$\n",
     "* The component of a matrix $M$ at row $i$ and column $j$ is denoted as either $M_{ij}$ or $m_{ij}$\n",
     "* The $j$<sup>th</sup> column of a matrix $M$ is denoted as $M_{:,j}$ or $m_{j}$\n",
     "* The $j$<sup>th</sup> row of a matrix $M$ is denoted as $M_{j,:}$ or $m^{T}_{j}$\n",
-    "* Suppose that we have numbers $x_1, x_2, x_3, \\ldots x_n$. If $y = a_1x_1 + a_2x_2 + a_3x_3 + \\ldots + a_nx_n$, where $x_1, x_2, x_3, \\ldots x_n$ are some other numbers, then $y$ is a linear combination of  $x_1, x_2, x_3, \\ldots x_n$"
+    "* Suppose that we have numbers $x_1, x_2, x_3, \\ldots x_n$. If $y = a_1x_1 + a_2x_2 + a_3x_3 + \\ldots + a_nx_n$, where $x_1, x_2, x_3, \\ldots x_n$ are some other numbers, then $y$ is a linear combination of  $x_1, x_2, x_3, \\ldots x_n$\n",
+    "* A matrix is square if it has the same number of rows and columns"
    ]
   },
   {
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +98,9 @@
     "x_2 = x_col[2][0]\n",
     "\n",
     "M_1 = M[:,1] # column slice\n",
-    "M_T_1 = M[1,:] # row slice"
+    "M_T_1 = M[1,:] # row slice\n",
+    "\n",
+    "sep = \"=========================\""
    ]
   },
   {
@@ -108,32 +112,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.63681631 0.80692745 0.05084435]\n",
-      " [0.1490703  0.64540222 0.71097893]]\n",
-      "===========================\n",
-      "[[0.07824615 0.2147977  0.16358979]]\n",
-      "===========================\n",
-      "[0.78096241 0.21063345 0.90759046]\n",
-      "===========================\n",
-      "[0.67805556 0.70589363 0.02504688 0.25919887 0.27971133 0.93691473\n",
-      " 0.76819015 0.95574815 0.93567279 0.91218531]\n",
-      "[[0.67805556 0.70589363 0.02504688 0.25919887 0.27971133 0.93691473\n",
-      "  0.76819015 0.95574815 0.93567279 0.91218531]]\n",
-      "[[0.67805556 0.70589363 0.02504688 0.25919887 0.27971133 0.93691473\n",
-      "  0.76819015 0.95574815 0.93567279 0.91218531]]\n",
-      "[[0.67805556 0.70589363]\n",
-      " [0.02504688 0.25919887]\n",
-      " [0.27971133 0.93691473]\n",
-      " [0.76819015 0.95574815]\n",
-      " [0.93567279 0.91218531]]\n",
-      "===========================\n"
+      "[[0.63285569 0.59211819 0.01850163]\n",
+      " [0.45281911 0.26457497 0.00597591]]\n",
+      "=========================\n",
+      "[[0.79794057 0.93664194 0.58856676]]\n",
+      "=========================\n",
+      "[0.38144335 0.21832541 0.10261183]\n",
+      "=========================\n",
+      "[0.0485009  0.71376719 0.70346129 0.89056215 0.25419393 0.49464767\n",
+      " 0.08818572 0.67597223 0.87221094 0.80835031]\n",
+      "[[0.0485009  0.71376719 0.70346129 0.89056215 0.25419393 0.49464767\n",
+      "  0.08818572 0.67597223 0.87221094 0.80835031]]\n",
+      "[[0.0485009  0.71376719 0.70346129 0.89056215 0.25419393 0.49464767\n",
+      "  0.08818572 0.67597223 0.87221094 0.80835031]]\n",
+      "[[0.0485009  0.71376719]\n",
+      " [0.70346129 0.89056215]\n",
+      " [0.25419393 0.49464767]\n",
+      " [0.08818572 0.67597223]\n",
+      " [0.87221094 0.80835031]]\n",
+      "=========================\n"
      ]
     }
    ],
@@ -143,17 +147,17 @@
     "\n",
     "print(M1)\n",
     "\n",
-    "print(\"===========================\")\n",
+    "print(sep)\n",
     "\n",
     "v1 = np.random.random((1, 3)) # a random column vector\n",
     "\n",
     "print(v1)\n",
     "\n",
-    "print(\"===========================\")\n",
+    "print(sep)\n",
     "v2 = np.random.random(3) # a random row vector\n",
     "\n",
     "print(v2)\n",
-    "print(\"===========================\")\n",
+    "print(sep)\n",
     "\n",
     "# can also reshape matrices and vectors\n",
     "\n",
@@ -167,7 +171,7 @@
     "print(v3_col_another_way)\n",
     "print(M2)\n",
     "\n",
-    "print(\"===========================\")\n"
+    "print(sep)\n"
    ]
   },
   {
@@ -242,36 +246,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.10415958 0.17669042]\n",
-      " [0.67719257 0.16923912]\n",
-      " [0.13625725 0.39413645]]\n",
+      "[[0.84155044 0.10350133]\n",
+      " [0.67842369 0.02882484]\n",
+      " [0.09323786 0.69758931]]\n",
       "+\n",
-      "[[0.89634298 0.90858737]\n",
-      " [0.42194416 0.68144016]\n",
-      " [0.01336825 0.79445802]]\n",
+      "[[0.22109236 0.51558658]\n",
+      " [0.72054356 0.70079357]\n",
+      " [0.95047241 0.36641164]]\n",
       "=\n",
-      "[[1.00050255 1.08527779]\n",
-      " [1.09913673 0.85067928]\n",
-      " [0.1496255  1.18859448]]\n",
-      "===========================\n",
-      "[[0.10415958 0.17669042]\n",
-      " [0.67719257 0.16923912]\n",
-      " [0.13625725 0.39413645]]\n",
+      "[[1.0626428  0.61908791]\n",
+      " [1.39896725 0.72961841]\n",
+      " [1.04371027 1.06400095]]\n",
+      "=========================\n",
+      "[[0.84155044 0.10350133]\n",
+      " [0.67842369 0.02882484]\n",
+      " [0.09323786 0.69758931]]\n",
       "+\n",
-      "[[0.89634298 0.90858737]\n",
-      " [0.42194416 0.68144016]\n",
-      " [0.01336825 0.79445802]]\n",
+      "[[0.22109236 0.51558658]\n",
+      " [0.72054356 0.70079357]\n",
+      " [0.95047241 0.36641164]]\n",
       "=\n",
-      "[[0.0933627  0.16053868]\n",
-      " [0.28573745 0.11532633]\n",
-      " [0.00182152 0.31312487]]\n"
+      "[[0.18606037 0.0533639 ]\n",
+      " [0.48883382 0.02020026]\n",
+      " [0.08862002 0.25560484]]\n"
      ]
     }
    ],
@@ -287,7 +291,7 @@
     "print('=')\n",
     "print(A + B)\n",
     "\n",
-    "print(\"===========================\")\n",
+    "print(sep)\n",
     "\n",
     "print(A)\n",
     "print('+')\n",
@@ -318,7 +322,7 @@
     "\\alpha \\cdot a_{n1} & \\alpha \\cdot a_{n2} & \\ldots &  \\alpha \\cdot a_{nm} \n",
     "\\end{bmatrix}$\n",
     "\n",
-    "Or more succintly, $(\\alpha A)_{ij} = \\alpha \\cdot a_{ij}$\n",
+    "Or more succintly, $(\\alpha A)_{ij} = \\alpha \\cdot A_{ij}$\n",
     "\n",
     "### Scalar Addition\n",
     "$b + \\begin{bmatrix} \n",
@@ -333,37 +337,38 @@
     "b + a_{n1} & b + a_{n2} & \\ldots &  b + a_{nm} \n",
     "\\end{bmatrix}$\n",
     "\n",
-    "Or more succintly, $(b + A)_{ij} = b + a_{ij}$\n",
+    "Or more succintly, $(b + A)_{ij} = b + A_{ij}$\n",
+    "By convention, we tend to write it as $A + b$\n",
     "\n",
     "The operations on vectors are defined accordingly. Note that these operations are commutative and associative."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.44742846 0.94016838]\n",
-      " [0.30012059 0.88776268]\n",
-      " [0.95213562 0.47838518]\n",
-      " [0.19786747 0.7840602 ]\n",
-      " [0.25802859 0.73093425]]\n",
-      "====================\n",
-      "[[0.89485691 1.88033675]\n",
-      " [0.60024119 1.77552536]\n",
-      " [1.90427124 0.95677035]\n",
-      " [0.39573494 1.5681204 ]\n",
-      " [0.51605718 1.4618685 ]]\n",
-      "====================\n",
-      "[[2.44742846 2.94016838]\n",
-      " [2.30012059 2.88776268]\n",
-      " [2.95213562 2.47838518]\n",
-      " [2.19786747 2.7840602 ]\n",
-      " [2.25802859 2.73093425]]\n"
+      "[[0.37619272 0.34653864]\n",
+      " [0.30175993 0.43102818]\n",
+      " [0.55410546 0.60680518]\n",
+      " [0.22476439 0.15351535]\n",
+      " [0.17032058 0.11558036]]\n",
+      "=========================\n",
+      "[[0.75238544 0.69307728]\n",
+      " [0.60351987 0.86205636]\n",
+      " [1.10821093 1.21361035]\n",
+      " [0.44952879 0.3070307 ]\n",
+      " [0.34064116 0.23116071]]\n",
+      "=========================\n",
+      "[[2.37619272 2.34653864]\n",
+      " [2.30175993 2.43102818]\n",
+      " [2.55410546 2.60680518]\n",
+      " [2.22476439 2.15351535]\n",
+      " [2.17032058 2.11558036]]\n"
      ]
     }
    ],
@@ -371,9 +376,9 @@
     "M1 = np.random.random((5, 2))\n",
     "\n",
     "print(M1)\n",
-    "print(\"====================\")\n",
+    "print(sep)\n",
     "print(2 * M1)\n",
-    "print(\"====================\")\n",
+    "print(sep)\n",
     "print(2 + M1)"
    ]
   },
@@ -389,6 +394,82 @@
     "$M^{T} = \\begin{bmatrix}2 & 5 \\\\ 3 & 6\\\\ 4 & 7\\end{bmatrix}$\n",
     "\n",
     "Sometimes for convenience, we write column vectors as the tranpose of row vectors. For example, instead of writing $v = \\begin{bmatrix} 2 \\\\ 3 \\\\ 4 \\end{bmatrix}$, we write $v = \\begin{bmatrix} 2 & 3 & 4 \\end{bmatrix}^{T}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.13983724 0.95807682 0.17524652]\n",
+      " [0.88026113 0.24211687 0.52199909]]\n",
+      "=========================\n",
+      "[[0.13983724 0.88026113]\n",
+      " [0.95807682 0.24211687]\n",
+      " [0.17524652 0.52199909]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M1 = np.random.random((2, 3))\n",
+    "print(M1)\n",
+    "print(sep)\n",
+    "print(M1.transpose())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Norm \n",
+    "\n",
+    "The norm of a vector or matrix is the some notion of length on a vector or matrix. The most familiar norm is the euclidean norm or $\\mathcal{l}_{2}$ norm. The euclidean norm of a vector $v$ of size $n$ is denoted as either $||v||_{2}$ or as just $||v||$, and is defined as follows:\n",
+    "$$||v||_{2} = \\sqrt{\\sum_{i=1}^{n} v_{i}^{2}}$$. In general the $\\mathcal{l}_{p}$ norm of a vector is \n",
+    "$$||v||_{p} = \\left({\\sum_{i=1}^{n} v_{i}^{p}}\\right)^{\\frac{1}{p}}$$\n",
+    "\n",
+    "The euclidean distance between two vectors is the euclidean norm of their component-wise difference, i.e. $$d(u, v) = ||u - v||$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.26524953]\n",
+      " [0.55767317]\n",
+      " [0.89475216]]\n",
+      "=========================\n",
+      "[[0.88371673]\n",
+      " [0.44631044]\n",
+      " [0.04857381]]\n",
+      "=========================\n",
+      "1.0871697679555463\n",
+      "0.9912152565510658\n",
+      "1.0540024360138136\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.random.random((3, 1))\n",
+    "u = np.random.random((3, 1))\n",
+    "norm_v = np.linalg.norm(v, 2)\n",
+    "norm_u = np.linalg.norm(u, 2)\n",
+    "dist_uv = np.linalg.norm(u - v, 2)\n",
+    "print(v)\n",
+    "print(sep)\n",
+    "print(u)\n",
+    "print(sep)\n",
+    "print(norm_v)\n",
+    "print(norm_u)\n",
+    "print(dist_uv)"
    ]
   },
   {
@@ -413,7 +494,7 @@
     "Hence, $C = AB$, is \n",
     "$$C = \\begin{bmatrix}14 & 19 & 24 \\\\ 24 & 33 & 42\\end{bmatrix}$$\n",
     "\n",
-    "Note that matmul is not commutative, but is associative"
+    "Note that matmul is not commutative, but is associative and distributive. Matrix Multiplication is actually a form of function composition over linear mappings!"
    ]
   },
   {
@@ -433,7 +514,7 @@
    "source": [
     "x = np.array([[2, 3], [4, 5]])\n",
     "y = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "print(x @ y)"
+    "print(x @ y) # @ is the symbol for matrix multiplication in Python"
    ]
   },
   {
@@ -450,7 +531,7 @@
     "$$u \\bullet v = u^{T}v = u_{1}v_{1} + u_{2}v_{2} + \\ldots u_{n}v_{n}$$ \n",
     "\n",
     "The dot product is useful as it has a geometric interpretation:\n",
-    "$$cos \\theta = \\frac{u \\bullet v}{\\vert\\vert u \\vert\\vert \\vert\\vert v \\vert\\vert}$$\n",
+    "$$cos ~ \\theta = \\frac{u \\bullet v}{\\vert\\vert u \\vert\\vert \\vert\\vert v \\vert\\vert}$$\n",
     "\n",
     "where $\\theta$ is the angle between vectors $u$ and $v$\n",
     "\n",
@@ -459,11 +540,133 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Matrix-Vector Multiplication\n",
+    "\n",
+    "We can also multiply matrices and vectors of appropriate dimensions. Recall that computationally, we can treat vectors as thourh they are matrices with a single column. Suppose that we have an $m \\times n$ matrix $M$ and a vector of size $n$ called $x$, i.e. $M \\in \\mathbb{R}^{m \\times n} \\text{ and } x \\in \\mathbb{R}^{n}$. The operation $Mx$ will yield a vector in $\\mathbb{R}^{m}$.\n",
+    "\n",
+    "For example, suppose\n",
+    "\n",
+    "$$M = \\begin{bmatrix}1 & 2 & 3 \\\\ 4 & 5 & 6\\end{bmatrix}$$\n",
+    "\n",
+    "and \n",
+    "\n",
+    "$$x = \\begin{bmatrix}1 \\\\ 2 \\\\ 3\\end{bmatrix}$$\n",
+    "\n",
+    "Then $Mx$ is\n",
+    "$$\\begin{bmatrix}1 & 2 & 3 \\\\ 4 & 5 & 6\\end{bmatrix} \\begin{bmatrix}1 \\\\ 2 \\\\ 3\\end{bmatrix} = $$\n",
+    "$$\\begin{bmatrix}1 + 4 + 9 \\\\ 4 + 10 + 18\\end{bmatrix} = \\begin{bmatrix}14 \\\\ 32\\end{bmatrix}$$\n",
+    "\n",
+    "Notice that the input has the same number of columns of $M$ and the output has the same number of rows. Recall that we mentioned that matrices encode functions; hence we can see that an $m \\times n$ matrix encodes a function with the domain $\\mathbb{R}^{n}$ and the range $\\mathbb{R}^{m}$, i.e. $M: \\mathbb{R}^{n} \\to \\mathbb{R}^{m}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.8512076  0.86231019 0.69342643]\n",
+      " [0.39889822 0.84434217 0.41829395]]\n",
+      "=========================\n",
+      "[[0.85895431]\n",
+      " [0.16611442]\n",
+      " [0.87856824]]\n",
+      "=========================\n",
+      "[[1.48361303]\n",
+      " [0.85039254]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = np.random.random((2, 3))\n",
+    "x = np.random.random((3, 1))\n",
+    "print(M)\n",
+    "print(sep)\n",
+    "print(x)\n",
+    "print(sep)\n",
+    "print(M @ x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Affine Transformation\n",
+    "An affine transformation is a special transformation of the form $Ax + b$ where $A \\in \\mathbb{R}^{m \\times n}, x \\in \\mathbb{R}^{n}, b \\in \\mathbb{R}$. Many AI algorithms use affine transformations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix Inverse\n",
+    "Suppose we have $Ax = y$, the matrix $A^{-1}$, called the inverse of $A$ is a special matrix where $A^{-1}y = x$. Note that $A$ and $A^{-1}$ have the same dimensions and $A$ must be square. Since matrices are functions, you can think of it as an inverse funciton. Just like other functions, not every matrix has an inverse. Their computation is beyond the scope of the course, but you should be aware of its existence.\n",
+    "\n",
+    "For non-square matrices, there are pseudo-inverses such as the Moore-Penrose Pseudo-inverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3]\n",
+      " [5 6]]\n",
+      "=========================\n",
+      "[[-2.          1.        ]\n",
+      " [ 1.66666667 -0.66666667]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = np.array([[2, 3], [5, 6]])\n",
+    "print(M)\n",
+    "print(sep)\n",
+    "print(np.linalg.inv(M))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Identity Matrices\n",
+    "\n",
+    "Identity Matrices are square matrices with 1 on its leading diagonal. An idenity matrix of size $n \\times n$ is denoted by $I_{n}$. For example,\n",
+    "\n",
+    "$$I_{2} = \\begin{bmatrix}1 & 0 \\\\ 0 & 1\\end{bmatrix}$$\n",
+    "\n",
+    "Identity matrices are special as $AI_{n} = A$ for all square matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "I_3 = np.eye(3)\n",
+    "print(I_3)"
+   ]
   }
  ],
  "metadata": {
