Added lab 1 material

--- a/labs/1/LinearAlgebra.ipynb
+++ b/labs/1/LinearAlgebra.ipynb
@@ -26,7 +26,8 @@
     "* The $j$<sup>th</sup> column of a matrix $M$ is denoted as $M_{:,j}$ or $m_{j}$\n",
     "* The $j$<sup>th</sup> row of a matrix $M$ is denoted as $M_{j,:}$ or $m^{T}_{j}$\n",
     "* Suppose that we have numbers $x_1, x_2, x_3, \\ldots x_n$. If $y = a_1x_1 + a_2x_2 + a_3x_3 + \\ldots + a_nx_n$, where $x_1, x_2, x_3, \\ldots x_n$ are some other numbers, then $y$ is a linear combination of  $x_1, x_2, x_3, \\ldots x_n$\n",
-    "* A matrix is square if it has the same number of rows and columns"
+    "* A matrix is square if it has the same number of rows and columns\n",
+    "* The vector $\\mathbf{0}$ is a special vector containing only 0s and $\\mathbf{1}$ is a special vector containing only 1s"
    ]
   },
   {
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +100,13 @@
     "\n",
     "M_1 = M[:,1] # column slice\n",
     "M_T_1 = M[1,:] # row slice\n",
+    "\n",
+    "ones_3_3 = np.ones((3, 3)) # 3 x 3 matrix of ones\n",
+    "zeros_3_3 = np.zeros((3, 3)) # 3 x 3 matrix of ones\n",
+    "ones_3 = np.ones((3, 1)) # vector with ones\n",
+    "zeros_3 = np.ones((3, 1)) # vector with ones\n",
+    "M_with_ones = np.ones_like(M) # create a matrix with all ones, with the same size as M\n",
+    "M_with_zeros = np.zeros_like(M) # create a matrix with all zeroes, with the same size as M\n",
     "\n",
     "sep = \"=========================\""
    ]
@@ -536,7 +544,52 @@
     "where $\\theta$ is the angle between vectors $u$ and $v$\n",
     "\n",
     "### Outer Product\n",
-    "The outer product between vectors $u$ and $v$ are defined as $xv^{T}$. One way to remember the difference between the inner and outer product is that the adjective indicates the placement of the tranpose operation. If it is inside of the vectors it is an inner product, if it is on the right vector it is an outer product."
+    "The outer product between vectors $u$ and $v$ are defined as $x \\otimes v = xv^{T}$. One way to remember the difference between the inner and outer product is that the adjective indicates the placement of the tranpose operation. If it is inside of the vectors it is an inner product, if it is on the right vector it is an outer product."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.29590262]\n",
+      " [0.68956713]\n",
+      " [0.30488254]]\n",
+      "=========================\n",
+      "[[0.42884117]\n",
+      " [0.98008657]\n",
+      " [0.35413682]]\n",
+      "=========================\n",
+      "[[0.91070084]]\n",
+      "=========================\n",
+      "[[0.12689522 0.29001018 0.10479001]\n",
+      " [0.29571477 0.67583549 0.24420111]\n",
+      " [0.13074618 0.29881129 0.10797013]]\n",
+      "=========================\n",
+      "[[0.29590262 0.29590262 0.29590262]\n",
+      " [0.68956713 0.68956713 0.68956713]\n",
+      " [0.30488254 0.30488254 0.30488254]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "u = np.random.random((3, 1))\n",
+    "v = np.random.random((3, 1))\n",
+    "ones = np.ones_like(u)\n",
+    "\n",
+    "print(u)\n",
+    "print(sep)\n",
+    "print(v)\n",
+    "print(sep)\n",
+    "print(np.transpose(u) @ v)\n",
+    "print(sep)\n",
+    "print(u @ np.transpose(v))\n",
+    "print(sep)\n",
+    "print(u @ np.transpose(ones))"
    ]
   },
   {
